Improve Dockerfile: line-up with monolith project